[gd_scene load_steps=2 format=3 uid="uid://dv16hjjjk02ka"]

[ext_resource type="Script" path="res://actors/sniffable_object.gd" id="1_bkvby"]

[node name="SniffableObject" type="Area3D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_bkvby")

[node name="HoldTimer" type="Timer" parent="."]

[connection signal="timeout" from="HoldTimer" to="." method="_on_timer_timeout"]
